--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
         
         <link rel="stylesheet" href="css/stylesheet.css">
 
+       <style> h2 {
+            color: green;
+        }  </style>
+
     </head>
 
 
